c/examples/writing-a-c-compiler-tests/tests/chapter_15/valid/subscripting/simple.c
/* A very simple subscripting test case */

int main(void) {
    int arr[3] = {1, 2, 3};
    return arr[2];
}