c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/scalar_initializer_for_static_array.c
// You can't initialize a static array with a scalar expression.
double arr[3] = 1.0;

int main(void)
{
    return 0;
}